--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -9,6 +9,19 @@
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
+
+  "commands": {
+    "_execute_browser_action": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+Period",
+        "windows": "Ctrl+Shift+Period",
+        "mac": "Command+Shift+Y",
+        "chromeos": "Ctrl+Shift+U",
+        "linux": "Ctrl+Shift+Period"
+      }
+    }
+  },
+
   "permissions": [
     "tabs",
     "storage"
