Display recent used tabs
- add event page for recording recent used tabs
- refine title; display number of tabs

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -10,6 +10,11 @@
     "default_popup": "popup.html"
   },
 
+  "background": {
+    "scripts": ["js/recentTabs.js"],
+    "persistent": false
+  },
+
   "permissions": [
     "tabs",
     "storage"
